# Atari-in-browser

./: CMakeLists.txt  LICENSE.md  Makefile  atari.html  desktop_demo.cpp  gui_initialization.h  variables.h  web_demo.cpp
examples/cpp-interface/: sharedLibraryInterfaceExample.cpp
include/: utils.h
include/experiment/: ExperimentNoDB.h
include/nn/: architure_initializer.h  weight_initializer.h  weight_optimizer.h
include/nn/networks/: feed_forward_value_function.h  graph.h  softmax_policy.h  vertex.h
src/: CMakeLists.txt  ale_interface.cpp  ale_interface.hpp  utils.cpp
src/emucore/: OSystem.cxx
src/environment/: stella_environment.cpp  stella_environment.hpp
src/experiment/: ExperimentDB.cpp
src/nn/: architecture_initializer.cpp  weight_initializer.cpp  weight_optimizer.cpp
src/nn/networks/: edge.cpp  graph.cpp  vertex.cpp
